[package]
name = "rust_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
stm32-hal2 = { version = "^1.6.2", features = ["l552", "l5rt"]}
defmt = "0.2.3"
panic-probe = "0.3.1"
stm32l5 = "0.15.1"
